fix(api): correct vercel rewrite config to fix 405 error on auth endpoints

--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,8 @@
   "outputDirectory": "dist/public",
   "rewrites": [
     {
-      "source": "/api/task",
-      "destination": "/api/task"
-    },
-    {
       "source": "/api/(.*)",
-      "destination": "/api/[...path]"
+      "destination": "/api/$1"
     },
     {
       "source": "/(.*)",
